# omoralabs-docs

./: .gitignore  .vercelignore  CLAUDE.md  README.md  logo.tsx  mdx-components.tsx  package.json  pnpm-lock.yaml  schema_sqls.py  source.config.ts
.github/workflows/: registry-tests.yml
app/: global.css  layout.tsx
app/(home)/: layout.tsx  not-found.tsx
app/llms-full.txt/: route.ts
components/: codeblock.tsx  gl_accounts_segmented.tsx  index-lists.tsx  nav-bottom.tsx  nav-title.tsx  read-components.tsx  render-table.tsx  type-table-from-file.tsx  type-table.tsx
components/ai/: page-actions.tsx
components/layout/: custom-icons.tsx  page-data-setter.tsx  page-data-wrapper.tsx  search-toggle.tsx  sidebar-footer.tsx  theme-toggle.tsx
components/ui/: button.tsx  copy-button.tsx  field.tsx  select.tsx  separator.tsx  tooltip.tsx
config/: index.ts
content/docs/: architecture.mdx  index.mdx  meta.json  stack.mdx
data_samples/: gl_accounts.csv
icons/: general.tsx
lib/: nav-title.tsx  seo.ts
registry/: cli.js  package-lock.json  package.json  pyproject.toml  sql_generator.py
registry/blueprints/plan_vs_actuals/config/: README.md  pyproject.toml
registry/blueprints/weekly_cash_balances/config/: LICENSE  README.md  pyproject.toml
registry/database/: data_loader.py  main.py  methods.py  registry.json  schema_manager.py  utils.py
registry/facts/: assets.json  exchange_rates.csv  exchange_rates.json  pnl.csv  pnl.json  revenue_changes.csv  revenue_changes.json
registry/semantic_layers/: asset_types.csv  asset_types.json  assets_providers.csv  dates.csv  (+14 more)
(+180 files in other folders)
